[project]
name = "sonic-data-indexer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "black>=25.1.0",
    "boto3==1.35.99",
    "dotenv>=0.9.9",
    "flake8>=7.2.0",
    "httpx>=0.28.1",
    "polars>=1.27.1",
    "pyarrow>=19.0.1",
    "pylint>=3.3.6",
    "requests>=2.32.3",
    "tqdm>=4.67.1",
]
